--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TRAVELKEUN</title>
-    <link rel="stylesheet" href="../src/tailwind.css">
-</head>
-<body>
-    <h1 class="text-orange-700">Hello World</h1>
-</body>
+    <!-- Google Font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter&display=swap"
+      rel="stylesheet"
+    />
+    <!-- Tailwind Style -->
+    <link rel="stylesheet" href="../src/tailwind.css" />
+  </head>
+  <body>
+    <h1 class="text-6xl">Hello World</h1>
+    <p class="font-inter">contoh</p>
+    <span>Ini adalah contoh span</span>
+  </body>
 </html>
