--- a/src/index.html
+++ b/src/index.html
@@ -4,19 +4,20 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TRAVELKEUN</title>
+    
     <!-- Google Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Inter&display=swap"
-      rel="stylesheet"
-    />
+      rel="stylesheet"/>
+
     <!-- Tailwind Style -->
     <link rel="stylesheet" href="../src/tailwind.css" />
   </head>
   <body>
     <h1 class="text-6xl">Hello World</h1>
     <p class="font-inter">contoh</p>
-    <span>Ini adalah contoh span</span>
+    <span class="text-orange">Ini adalah contoh span</span>
   </body>
 </html>
