--- a/src/index.html
+++ b/src/index.html
@@ -4,20 +4,31 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TRAVELKEUN</title>
-    
+
     <!-- Google Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Inter&display=swap"
-      rel="stylesheet"/>
+      rel="stylesheet"
+    />
 
     <!-- Tailwind Style -->
     <link rel="stylesheet" href="../src/tailwind.css" />
   </head>
   <body>
-    <h1 class="text-6xl">Hello World</h1>
-    <p class="font-inter">contoh</p>
-    <span class="text-orange">Ini adalah contoh span</span>
+    <nav class="py-9 px-4">
+      <div class="container mx-auto">
+        <div class="flex justify-between">
+          <img src="../public/asset/logo.svg" alt="logo" />
+          <img src="../public/asset/menu.svg" alt="menu" />
+        </div>
+      </div>
+      <div class="fixed bottom-0 right-0 left-0 p-4">
+        <ul>
+          <li><a href="">Home</a></li>
+        </ul>
+      </div>
+    </nav>
   </body>
 </html>
