--- a/src/index.html
+++ b/src/index.html
@@ -20,13 +20,37 @@
   <body>
     <nav x-data="{navOpen:false}" class="py-9 px-4">
       <div class="container mx-auto">
-        <div class="flex justify-between">
-          <img src="../public/asset/logo.svg" alt="logo" />
-          <img
-            @click="navOpen=!navOpen"
-            src="../public/asset/menu.svg"
-            alt="menu"
-          />
+
+        <div class="flex justify-between items-center">
+          <img src="../public/asset/logo.svg" alt="logo" class="order-1 sm:order-2"/>
+          <img 
+          @click="navOpen=!navOpen" 
+          src="../public/asset/menu.svg" 
+          alt="menu" 
+          class="lg:hidden order-2 sm:order-1"/>
+
+          <div class="order-2 hidden lg:block">
+            <ul class="flex gap-16">
+              <li class="text-grey font-bold text-sm font-circular"><a href="">Home</a></li>
+              <li class="text-grey font-bold text-sm font-circular opacity-50"><a href="">Discover</a></li>
+              <li class="text-grey font-bold text-sm font-circular opacity-50"><a href="">Sepcial Deals</a></li>
+              <li class="text-grey font-bold text-sm font-circular opacity-50"><a href="">Contact </a></li>
+            </ul>
+          </div>
+          
+          <div class="order-3 hidden sm:block">
+            <button
+            class="grow px-8 py-4 font-bold text-grey rounded-full text-sm"
+            >
+            Login
+            </button>
+            <button
+            class="grow bg-ungu px-8 py-4 font-bold text-white rounded-full text-sm"
+            >
+            Sign Up
+            </button>
+          </div>
+        
         </div>
       </div>
       <div
@@ -38,7 +62,7 @@
         x-transition:leave-start="opacity-100"
         x-transition:leave-end="opacity-0"
         x-data="{open:false}"
-        class="fixed bottom-0 right-0 left-0 bg-white p-4 border"
+        class="fixed bottom-0 right-0 left-0 bg-white p-4 border lg:hidden"
       >
         <ul class="flex justify-between">
           <li>
